--- a/cursedapp.csproj
+++ b/cursedapp.csproj
@@ -67,6 +67,12 @@
   <ItemGroup>
     <Compile Include="Database.cs" />
     <Compile Include="DBUsers.cs" />
+    <Compile Include="Forms\FormSolving.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormSolving.Designer.cs">
+      <DependentUpon>FormSolving.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -95,6 +101,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormRegistration.resx">
       <DependentUpon>FormRegistration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormSolving.resx">
+      <DependentUpon>FormSolving.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
